<?xml version="1.0" encoding="utf-8"?>
<resources>

    <string name="app_name">myShowsSer</string>
    <string name="my_profile">Мой профиль</string>
    <string name="my_ser">Мои сериалы</string>
    <string name="rating_ser">Рейтинг сериалов</string>
    <string name="catalog_ser">Каталог сериалов</string>
    <string name="navigation_drawer_open">Open navigation drawer</string>
    <string name="navigation_drawer_close">Close navigation drawer</string>
    <string name="action_example">Example action</string>
    <string name="action_settings">Settings</string>
    <string name="my_main">My</string>
    <string name="shows_main">Shows</string>
    <string name="sign_up">Войти</string>
    <string name="main_activity_label">My Shows</string>
    <string name="error_login_or_password">Не правильный логин или пароль</string>
    <string name="please_write_login_pass">Имя пользователя и пароль не должны быть пустыми</string>
    <string name="ACCOUNT_LABEL">Account Label</string>
    <string name="account_type">com.myShowsSer</string>
    <string name="shows_watch">ShowsWatch</string>
    <string name="watch_episode">Видел</string>
    <string name="unwatched_episode">Не смотрел</string>
    <string name="next_episode">Будут</string>
    <string name="show_current_activity_label">ShowCurrentActivity</string>
    <string name="check_episode_label">CheckEpisodeActivity</string>

</resources>
