<?xml version="1.0" encoding="utf-8"?>

<android.support.v4.widget.DrawerLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/drawer_layout"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".ShowCurrentActivity">

    <LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
        android:orientation="vertical"
        android:layout_width="match_parent"
        android:layout_height="match_parent">

        <TextView
            android:text="@string/watch_episode"
            android:gravity="center"
            android:layout_width="match_parent"
            android:layout_height="wrap_content" />

        <ListView
            android:id="@+id/list_view_watch_episode"
            android:layout_weight="1"
            android:layout_width="match_parent"
            android:layout_height="0dp" />

        <TextView
            android:text="@string/unwatched_episode"
            android:gravity="center"
            android:layout_width="match_parent"
            android:layout_height="wrap_content" />

        <ListView
            android:layout_weight="1"
            android:id="@+id/list_view_unwatch_episode"
            android:layout_width="match_parent"
            android:layout_height="0dp" />

        <TextView
            android:text="@string/next_episode"
            android:gravity="center"
            android:layout_width="match_parent"
            android:layout_height="wrap_content" />

        <ListView
            android:id="@+id/list_view_next_episode"
            android:layout_weight="1"
            android:layout_width="match_parent"
            android:layout_height="0dp" />

    </LinearLayout>


    <fragment
        android:id="@+id/navigation_drawer"
        android:layout_width="@dimen/navigation_drawer_width"
        android:layout_height="match_parent"
        android:layout_gravity="start"
        android:name="com.myShows.dmitry.myshowsserial.navigationDrawer.BackNavigationDrawer"
        tools:layout="@layout/fragment_navigation_drawer" />

</android.support.v4.widget.DrawerLayout>