<?xml version="1.0" encoding="utf-8"?>

<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:orientation="vertical" android:layout_width="match_parent"
    android:layout_height="match_parent">

    <LinearLayout
        android:orientation="horizontal"
        android:layout_width="match_parent"
        android:gravity="center"
        android:layout_height="@dimen/height_main_logo_login_activity">
        <TextView
            android:text="@string/my_main"
            android:textSize="@dimen/text_size_login_activity"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content" />
        <ImageView
            android:src="@android:drawable/alert_dark_frame"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"/>
        <TextView
            android:textSize="@dimen/text_size_login_activity"
            android:text="@string/shows_main"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content" />
        </LinearLayout>
    <LinearLayout
        android:orientation="vertical"
        android:gravity="center_horizontal"
        android:layout_width="match_parent"
        android:layout_weight="1"
        android:layout_height="match_parent">
        <EditText
            android:id="@+id/login_activity_login"
            android:layout_marginTop="@dimen/top_margin_login"
            android:layout_marginLeft="@dimen/left_right_margin_login"
            android:layout_marginRight="@dimen/left_right_margin_login"
            android:layout_width="match_parent"
            android:inputType="textPersonName"
            android:singleLine="true"
            android:layout_height="wrap_content" />
        <EditText
            android:id="@+id/login_activity_password"
            android:layout_marginTop="@dimen/top_margin_login_inside"
            android:singleLine="true"
            android:layout_marginRight="@dimen/left_right_margin_login"
            android:layout_marginLeft="@dimen/left_right_margin_login"
            android:layout_width="match_parent"
            android:inputType="textPassword"
            android:layout_height="wrap_content" />
        </LinearLayout>

    <LinearLayout
        android:layout_width="match_parent"
        android:gravity="center"
        android:layout_height="70dp">
            <Button
                android:layout_width="@dimen/width_sing_up"
                android:layout_height="wrap_content"
                android:textColor="@android:color/white"
                android:id="@+id/login_activity_sign_in"
                android:text="@string/sign_up"
                android:onClick="onClickSignIn" />
        </LinearLayout>

</LinearLayout>